add test 34